# cwfs

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: cwfs-tests.yml
cwfs/: __init__.py  algorithm.py  bino_cwfs.py  errors.py  image.py  instrument.py  plots.py  tools.py
cwfs/data/config/61inch/: 61inch.param
cwfs/data/config/mmirs/: mmirs.param
cwfs/data/config/mmto/: mmto.param
cwfs/example_subpkg/: setup_package.py
cwfs/tests/: test_validate.py
docs/: conf.py  index.rst
docs/cwfs/: index.rst
licenses/: LICENSE.rst
