[metadata]
name = cwfs
author = T. E. Pickering
author_email = te.pickering@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/MMTObservatory/cwfs
description = Utilities for performing curvature wavefront sensing
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = MMTObservatory/cwfs

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    scipy
    scikit-image

[options.entry_points]
console_scripts =
    bino_cwfs = cwfs.bino_cwfs:main

[options.extras_require]
all =
    matplotlib
    mmtwfs
    photutils
    dnspython
    poppy
    lmfit
    ccdproc
    astroscrappy
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
cwfs = data/*/*

[tool:pytest]
testpaths = "cwfs" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    cwfs/_astropy_init*
    cwfs/conftest.py
    cwfs/*setup_package*
    cwfs/tests/*
    cwfs/*/tests/*
    cwfs/extern/*
    cwfs/version*
    */cwfs/_astropy_init*
    */cwfs/conftest.py
    */cwfs/*setup_package*
    */cwfs/tests/*
    */cwfs/*/tests/*
    */cwfs/extern/*
    */cwfs/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
